# request-bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bot_settings.json  pyproject.toml
app/: catalog_settings.py  main.py
app/config/: mat.json  material_catalog.json  normalize_material_catalog.py  settings.py  update_material_catalog.py  work_catalog.json
app/handlers/: __init__.py  admin.py  catalog_settings.py  client.py  engineer.py  manager.py  master.py  specialist.py  specialist_legacy.py  start.py
app/handlers/common/: __init__.py  work_fact_view.py
app/handlers/engineer/: __init__.py  utils.py
app/handlers/engineer/budget/: __init__.py  utils.py
app/handlers/master/: __init__.py  states.py  utils.py
app/handlers/specialist/: __init__.py  utils.py
app/infrastructure/db/: session.py
app/keyboards/: __init__.py  calendar.py  client_kb.py  engineer_kb.py  manager_kb.py  master_kb.py  specialist_kb.py
app/services/: export.py  material_catalog.py  reminders.py  reporting.py  request_service.py  user_service.py  work_catalog.py
app/utils/: advanced_filters.py  identifiers.py  logging.py  pagination.py  request_filters.py  request_formatters.py  timezone.py
migrations/: env.py
migrations/versions/: 20251209_ensure_apartment_column.py  20260121_increase_request_title_length.py  20260130_engineer_planned_hours.py  2cf6d78656f1_add_user_role_tables.py  738310998a40_create_all_tables.py  add_apartment_to_requests.py  add_database_indexes.py  b7c6a987ba0c_add_letter_act_type.py  e979945ece44_create_users_table.py
(+44 files in other folders)
