[tool.poetry]
name = "request-bot"
version = "0.1.0"
description = "Telegram-бот для учёта заявок"
authors = ["Egor Bezborodov <egor.bezborodoff@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiogram = "^3.7.0"
SQLAlchemy = "^2.0"
asyncpg = "^0.30.0"
alembic = "^1.17.0"
pydantic-settings = "^2.3"
python-dotenv = "^1.0.1"
poetry-core = ">=2.0.0"
greenlet = "^3.2.4"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_first_party = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
exclude = ["migrations", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]